--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --color-brand--1: #ffb545;
   --color-brand--2: #00c46a;
+  --color-brand--3: #ff0000;
 
   --color-dark--1: #2d3439;
   --color-dark--2: #42484d;
@@ -197,4 +198,17 @@ a:visited {
 
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
+}
+
+.btn-reset {
+  background-color: var(--color-dark--2);
+  border-left: 5px solid var(--color-brand--3);
+  border-radius: 5px;
+  padding: 1.5rem 2.25rem;
+  cursor: pointer;
+
+  color: var(--color-light--2);
+  font-family: 'Manrope', sans-serif;
+  font-size: 1.7rem;
+  font-weight: 600;
 }
