--- a/style.css
+++ b/style.css
@@ -212,3 +212,34 @@ a:visited {
   font-size: 1.7rem;
   font-weight: 600;
 }
+
+@media only screen and (max-width: 1100px) {
+  body {
+    flex-direction: column;
+    padding: 0.2rem;
+  }
+
+  .workouts {
+    height: 29vh;
+  }
+
+  .workout {
+    padding: 1rem 0.5rem;
+    margin-bottom: 1rem;
+    gap: 0.5rem 0.2rem;
+  }
+
+  .sidebar {
+    flex-basis: 26rem;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+  }
+
+  .logo {
+    height: 3.64rem;
+    margin-bottom: 1rem;
+  }
+
+  .btn-reset {
+    padding: 1rem 0.5rem;
+  }
+}
